Some styles to control components

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.category__title {
+  text-align: start;
+  font-weight: bold;
+}
+
+.detail__modal {
+  margin-bottom: 10px;
+}
+
+.detail__modal__fav {
+  margin-bottom: 10px;
+  color: #337af6;
+}
+
+.detail__modal__fav__text {
+  margin-left: 5px;
+}
+
+.m-left-text {
+  margin-left: 5px;
 }
